<resources>
    <string name="app_name">DOA</string>
    <string name="info_business">Badan Usaha adalah badan yuridis/hukum dan ekonomis yang memiliki tujuan untuk mencari laba atau keuntungan. Di Indonesia ada beberapa berntuk badan usaha, diataranya :\n\n
        Perusahaan Perseorangan\nPerusahaan perseorangan adalah jenis kegiatan usaha dimana modal dan manajemenya ditangani oleh satu orang saja.\n\n
        Firma (Fa)\nFirma adalah jenis badan usaha yang didirikan 2 orang atau lebih.\n\n
        Persekutuan Komanditer (CV)\nPersekutuan komanditer atau commanditaire vennootschap (disingkat CV) adalah suatu persekutuan yang didirikan oleh dua orang atau lebih atas asas kepercayaan.\n\n
        Perseroan Terbatas (PT)\nPerseroan terbatas atau disingkat PT adalah badan usaha yang modalnya didapatkan dari hasil penjualan saham. Setiap pemegang surat saham mempunyai hak atas perusahaan dan setiap pemegang surat saham berhak atas keuntungan atau dividen.\n\n
        Yayasan\nYayasan adalah badan usaha yang tidak mencari keuntungan atau lembaga non-profit. Badan usaha ini didirikan untuk kegiatan sosial dan berbadan hukum.\n
    </string>
    <string name="info_location">Tulis alamat lengkap dari kantor / usahamu berada</string>
    <string name="info_resources">Jelaskan sumber daya utama yang membawa keuntungan bagi bisnismu.</string>
    <string name="info_personal">Sebutkan nama, jabatan dan keahlian orang-orang yang ikut membangun bisnismu</string>
    <string name="username">Username</string>
    <string name="phone_number">Handphone</string>
    <string name="confirm_password">Ulangi Kata sandi</string>
    <string name="sign_up">register</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet,
        consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore,</string>
    <string name="or">atau</string>
    <string name="text_idea">Create idea …</string>
    <string name="menu_notes">notes</string>
    <string name="menu_voice">voice</string>
    <string name="menu_camera">camera</string>
    <string name="enterpreneur">Social Enterprenuer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Beranda</string>
    <string name="business_plan">Business Plan</string>
    <string name="business_example">Business Example</string>
    <string name="themes">Theme</string>
    <string name="settings">Setting</string>
    <string name="trash">Trash</string>
    <string name="archive">Archived</string>
    <string name="ideation">Idea</string>
    <string name="empty_trash_desc">Any idea in Trash will deleted forever in 30 days</string>
    <string name="empty_trash">EMPTY TRASH</string>
    <string name="label">Label</string>
    <string name="cake_shop">e.g My Cake Shop</string>
    <string name="write_your_idea">Write your idea</string>
    <string name="startup_event">tags : startup, event</string>
    <string name="doa_official">Doa Official</string>
    <string name="date">September, 30 at 11:00 AM</string>
    <string name="business_permit">Permit</string>
    <string name="like_us">Like us on</string>
    <string name="rate_doa">Nilai Aplikasi DOA</string>
    <string name="term_service">Ketentuan Layanan</string>
    <string name="max_types">*max 3 types</string>
    <string name="product_service">Product / Service</string>
    <string name="forget_password">Lupa kata sandi</string>
    <string name="forgot_password">Lupa kata sandi kamu ?</string>
    <string name="we_just_need">Kami hanya perlu email atau nomor\ntelepon Anda yang terdaftar untuk\nmengirim pengaturan ulang\nkata sandi Anda</string>
    <string name="reset_password">atur ulang kata sandi</string>
    <string name="enter_valid_email">*masuk alamat email yang benar</string>
    <string name="we_sent_email">Kami telah mengirim pesan</string>
    <string name="check_your_email">Periksa email mu dan ikuti\ninstruksi didalamnya</string>
    <string name="back_to_login">coba masuk kembali</string>
    <string name="next">Berikut</string>
    <string name="name">Nama</string>
    <string name="idea_plan"><![CDATA[Idea & Plan]]></string>
    <string name="skip">Lewati</string>
    <string name="start">Sekarang</string>
    <string name="quotes_by_mark">Done better than perfect \'Quotes by: Mark\'</string>
    <string name="business_entity">Business Entity</string>
    <string name="usaha_dagang">Usaha Dagang</string>
    <string name="location">Location</string>
    <string name="search">Search</string>
    <string name="abc_123">abc-123-xyz-123</string>
    <string name="redeem">redeem</string>
    <string name="voucher_invalid">voucher code invalid</string>
    <string name="hide_my_profile">Sembunyikan Profile Saya</string>
    <string name="purchase_premium">Berlangganan Premium</string>
    <string name="enter_voucher_code">Masukan Kode Voucher</string>
    <string name="language">Bahasa</string>
    <string name="currency">Mata Uang</string>
    <string name="help">Bantuan</string>
    <string name="privacy_policy">Kebijakan Provasi</string>
    <string name="title_themes">Technology Model</string>
    <string name="credit_themes">by in the mean time studio</string>
    <string name="purchase_themes">Rp 100.000</string>
    <string name="tags_themes">technology</string>
    <string name="tags">tags :</string>
    <string name="live_preview">Pratinjau</string>
    <string name="purchase">Beli</string>
    <string name="hundreds_branding"><![CDATA[Hundreds branding, business plan & pitch deck templates]]></string>
    <string name="about_themes">Detail Tema</string>
    <string name="about_list_themes">Modern, simple and clean Design, Ideal for modern business presentations 16:9 widescreen 2560×1440 Tons of unique Infographics Elements pack with 500+ vector icons included
    </string>
    <string name="add_to_cart">Tambah ke keranjang</string>
    <string name="buy_now">Beli Sekarang</string>
    <string name="empty_card">Empty Card</string>
    <string name="check_out">Check Out</string>
    <string name="pinned">Pinned</string>
    <string name="delete">Delete</string>
    <string name="business">Business</string>
    <string name="market">Pasar</string>
    <string name="strategy">Strategi</string>
    <string name="financial">Financial</string>
    <string name="unarchive">Unarchive</string>
    <string name="empaty_card">Empty Card</string>
    <string name="total_cart">Total $30</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="more_items_by">More items by in the mean time studio</string>
    <string name="reset_your_password">Atur ulang kata sandi kamu</string>
    <string name="collections">Koleksi</string>
    <string name="connection">Koneksi</string>
    <string name="inbox">Kotak Masuk</string>
    <string name="about">Tentang saya</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius lectus blandit felis sollicitudin, a elementum ipsum gravida.</string>
    <string name="interest">Minat</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="adam_luthfi">Adam Luthfi</string>
    <string name="about_you">About you</string>
    <string name="phone">Phone number</string>
    <string name="update">Change</string>
    <string name="invite_friends">Invite Member</string>
    <string name="cancel">Cancel</string>
    <string name="samples">Samples</string>
    <string name="title">Judul</string>
    <string name="sector">Sector</string>
    <string name="sub_sector">Sub Sector</string>
    <string name="start_date">Start</string>
    <string name="finish_date">Finnish</string>
    <string name="add_reminder">Remember</string>
    <string name="date_setup">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="sample_date">Mon, Nov 18</string>
    <string name="sample_time">03:30 PM</string>
    <string name="sample_repeat">Does not repeat</string>
    <string name="create">Buat</string>
    <string name="congratulation">Congratulation</string>
    <string name="the_business">The Business</string>
    <string name="finance">Finnance</string>
    <string name="legal_form_structure">Badan Usaha</string>
    <string name="personal">Personal</string>
    <string name="key_resources">Kunci Sukses</string>
    <string name="key_personal">Pendiri &amp; Personal</string>
    <string name="add_more_key_resources">add more Key Resources</string>
    <string name="expertise">Keahlian</string>
    <string name="position">Posisi</string>
    <string name="product_services_offer">Produk/jasa yang ditawarkan</string>
    <string name="geografic_market">Target geografis</string>
    <string name="competitive_advantage">Keunggulan kompetitif</string>
    <string name="key_competitors">Pesaing</string>
    <string name="weakness">Weakness</string>
    <string name="add_more_key_competitors">add more Key Competitors</string>
    <string name="_5_year_objective">Tujuan yang akan dicapai dalam 5 tahun</string>
    <string name="strategic_opportunities">Peluang Strategis</string>
    <string name="add_more_strategic_opportunities">add more Strategic Opportunities</string>
    <string name="strategic_steps_to_archive_5_year_objective">Langkah strategis untuk mencapai tujuan</string>
    <string name="add_more_step">add more step</string>
    <string name="your_summary">Your Summary</string>
    <string name="executive_summary">Rinkasan Rencana Usaha</string>
    <string name="explain_executive_summary">doa.ai offers artificial intelligence to SMK Student and Mahasiswa in the Indonesia market. The business has a strong market position and a coherent strategy. It has established clear steps to achieve its objective of Became the most advance Indonesia big data and AI to mentor entrepreneur in the next five years. doa.ai has set targets that they are committed about achieving. Next year the business will achieve sales of $100,000. Sales will grow by 90 percent each year to reach the figure of $130,3209 at the end of the period. By the final year of this plan the business will be achieving a net profit of $873,727. This will represent a good return and provide sufficient retained earnings for future development plans.</string>
    <string name="explain_business">doa.ai is formed as a Perseroan Terbatas (PT). This is an appropriate legal structure for this type of business and will fit well with its objectives. The management team will review this structure as the business develops. doa.ai is well placed to offer artificial intelligence in the Indonesia market. The management team have the experience and competencies to deliver the targets they have set themselves. Adam Lutfi, CTO, has knowledge and experience of Data Science. The management team are committed to growing the business by providing excellent customer service and building a strong credible brand. This will be demonstrated through their trustworthy relations with customers and other stakeholders. The management team take their responsibility seriously and are committed to an ethical approach to business.</string>
    <string name="introduc_login">Wujudkan ide mu,\natau orang lain akan\nmempekerjakan kamu\nuntuk mewujudkan\nidenya</string>
    <string name="login_with_facebook">masuk dengan facebook</string>
    <string name="regis_here">daftar disini.</string>
    <string name="no_have_account">Belum punya akun ?</string>
    <string name="email">Email</string>
    <string name="another_design">Desaign lainnya dari</string>
</resources>