<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dashboard.DashboardActivity"
    android:layout_margin="16dp"
    android:padding="16dp"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/imgDasbor"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_logo_login"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/textDasbord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduc_login"
        android:textSize="22sp"
        android:gravity="center_vertical"
        android:layout_margin="16dp"
        android:layout_above="@id/linearDasboard"
        android:layout_below="@id/imgDasbor"/>

    <LinearLayout
        android:id="@+id/linearDasboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/textLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/color_retangcle_button"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:textAllCaps="false"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/no_have_account"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="6dp"/>

            <TextView
                android:id="@+id/textRegister"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/regis_here"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="16dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/or"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/btnLoginFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_facebook" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:text="@string/login_with_facebook"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>