<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >


    <item
        android:visible="false"
        android:id="@+id/action_add_pinned"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_pinned"
        android:title="@string/pinned" />

    <item
        android:visible="false"
        android:id="@+id/action_add_colaborator"
        android:icon="@drawable/ic_colaborator"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/archive" />

    <item
        android:visible="false"
        android:title="copy"
        android:id="@+id/action_add_copy"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_copy_bplan"
         />
    <item
        android:icon="@drawable/ic_archived"
        app:showAsAction="always"
        android:id="@+id/action_add_archived"
        android:orderInCategory="100"
        android:title="@string/delete" />

    <item
        android:icon="@drawable/ic_trash"
        app:showAsAction="always"
        android:id="@+id/action_add_trash"
        android:orderInCategory="100"
        android:title="@string/delete" />
</menu>