<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.email.ForgotSendEmailActivity"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_margin="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_success_massage_forgotpassword"
            android:layout_gravity="center"
            android:paddingBottom="16dp"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center_horizontal"
            android:text="@string/we_sent_email"
            android:layout_gravity="center"
            android:paddingBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:gravity="center_horizontal"
            android:text="@string/check_your_email"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnBacktoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textSize="14sp"
            android:background="@drawable/color_retangcle_button"
            android:text="@string/back_to_login"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"/>
    </LinearLayout>

</RelativeLayout>