<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
    android:layout_width="match_parent"

    >



    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressbar_resetpass"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.forgot.ForgotPasswordActivity"
    android:background="@android:color/transparent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@android:color/transparent"
        app:elevation="0dip">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarforgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.ToolbarStyle.Business"
            app:elevation="0dp" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_lock_forgotpassword"
        android:layout_margin="16dp"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center"
        android:text="@string/forgot_password"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/we_just_need"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_email_forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEmailForgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_thin"
            android:hint="@string/email"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/colorOrangeyRed"
        android:text="@string/enter_valid_email"
        android:layout_marginStart="35dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnSendResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:background="@color/colorVeryLightPink_c1"
            android:layout_alignParentBottom="true"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"/>
    </RelativeLayout>

</LinearLayout>
</RelativeLayout>