<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@android:color/transparent"
        app:elevation="0dip"
        android:id="@+id/appBarL">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarDetailThemes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.ToolbarStyle"
            app:elevation="0dp" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageThemesDetail"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="12sp"
                android:id="@+id/btnLivePreview"
                android:text="@string/live_preview"
                android:background="@drawable/color_retangcle_preview"
                android:textColor="@color/colorWhite"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:textAllCaps="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:text="@string/about_themes"
                    android:layout_margin="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purchase_themes"
                    android:layout_margin="8dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorVeryLightPink_eb"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/about_list_themes"
                android:textAlignment="textStart"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:id="@+id/btnAddToCart"
                    android:text="@string/add_to_cart"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/color_retangcle_themes_detail"
                    android:textSize="12sp"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="false"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/btnBuyNow"
                    android:textSize="12sp"
                    android:text="@string/buy_now"
                    android:background="@drawable/color_retangcle_themes"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="false"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="@string/another_design"
                android:layout_margin="8dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorVeryLightPink_eb"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:orientation="horizontal"
                android:id="@+id/recyleDetailThemes"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>